remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -577,7 +577,7 @@
                 "description": "Projects Selected (5)",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Winter 2020",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-02-10",
