--- a/_data/projects.json
+++ b/_data/projects.json
@@ -125,29 +125,7 @@
     },
     {
         "name": "Consolidate Web Infrastructure",
-        "milestones": [
-            {
-                "milestone_date": "2019-12-23",
-                "description": "Create SoW",
-                "owner": "Harold",
-                "project_name": "Consolidate Web Infrastructure",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2019-12-26",
-                "description": "Contract resource to investigate providers",
-                "owner": "Harold",
-                "project_name": "Consolidate Web Infrastructure",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2019-12-30",
-                "description": "Migration of old services to new services",
-                "owner": "Harold",
-                "project_name": "Consolidate Web Infrastructure",
-                "status": "overdue"
-            }
-        ],
+        "milestones": [],
         "description": "Consolidate all extant servers to a single provider and move all DNS to a single provider.",
         "leaders": [
             {
@@ -992,7 +970,7 @@
                 "description": "Close Call for Program Team Members",
                 "owner": "Emily",
                 "project_name": "Global AppSec - San Francisco",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-01-10",
