--- a/_data/projects.json
+++ b/_data/projects.json
@@ -117,13 +117,6 @@
         "url": "https://www2.owasp.org/www-staff/projects/201911-membership-form"
     },
     {
-        "name": "BlackHat London 2019",
-        "milestones": [],
-        "description": "* [Conference call minutes from 10/9/2019](https://drive.google.com/open?id=1KukrG-jbV3PErZrK4WfUzwOORa7quZ05nefgM3i_-dM)* [BlackHat London 2019 website](https://www.blackhat.com/eu-19/)* December 2-5, 2019  Briefing on Dec 4 & 5  * Briefing & Business Hall Hours:  * Wednesday, December 4, 10:30 AM - 7:00 PM | Business Hall Reception, 5:30 PM - 7:00 PM  * Thursday, December 5: 10:00 AM - 4:00 PM* Wednesday, December 4 - 3:25 PM - 4:15 PM WIA Community Session \"Share insights they have gained at different stages of their   careers that could help other women grow their our own careers and maximize the contribution of women in the field.\" * Wednesday, December 4 - 4:30 PM - 5:30 PM Women in Security Mixer",
-        "leaders": [],
-        "url": "https://www2.owasp.org/www-staff/projects/201912-Blackhat-London"
-    },
-    {
         "name": "Consolidate Web Infrastructure",
         "milestones": [],
         "description": "Consolidate all extant servers to a single provider and move all DNS to a single provider.",
@@ -155,13 +148,6 @@
             {
                 "milestone_date": "2020-01-14",
                 "description": "Validate in-bound search redirect working on events/policy pages",
-                "owner": "Harold",
-                "project_name": "Website Re-launch",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2020-01-14",
-                "description": "Validate Google Analytics instance running",
                 "owner": "Harold",
                 "project_name": "Website Re-launch",
                 "status": "on-time"
@@ -233,46 +219,39 @@
         "name": "Events Form",
         "milestones": [
             {
-                "milestone_date": "2019-12-31",
+                "milestone_date": "2020-01-10",
                 "description": "Wireframe of Event Form",
                 "owner": "Mike",
                 "project_name": "Events Form",
-                "status": "overdue"
+                "status": "on-time"
             },
             {
-                "milestone_date": "2020-01-03",
-                "description": "Test Event as SKU in Stripe for dev effort",
-                "owner": "Mike",
-                "project_name": "Events Form",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2020-01-10",
+                "milestone_date": "2020-01-22",
                 "description": "Beta version of Event Form Ready for testing",
                 "owner": "Simon",
                 "project_name": "Events Form",
                 "status": "on-time"
             },
             {
-                "milestone_date": "2020-01-17",
-                "description": "Relecase Candiate of Form ready for regression testing",
+                "milestone_date": "2020-01-24",
+                "description": "Release Candiate of Form ready for regression testing",
                 "owner": "Simon",
                 "project_name": "Events Form",
                 "status": "on-time"
             },
             {
-                "milestone_date": "2020-01-23",
+                "milestone_date": "2020-02-04",
                 "description": "Launch form with Global AppSec - Dublin as first product",
                 "owner": "Harold",
                 "project_name": "Events Form",
                 "status": "on-time"
             },
             {
-                "milestone_date": "2020-01-31",
+                "milestone_date": "2020-02-07",
                 "description": "Release Candidate of Forms and Slack bot",
                 "owner": "Simon",
                 "project_name": "Events Form",
-                "status": "on-time"
+                "status": "future"
             },
             {
                 "milestone_date": "2020-02-07",
@@ -314,26 +293,6 @@
             }
         ],
         "url": "https://www2.owasp.org/www-staff/projects/201912-mailchimp"
-    },
-    {
-        "name": "RegOnline Closure",
-        "milestones": [
-            {
-                "milestone_date": "2019-12-23",
-                "description": "Notify Leaders that RegOnline is no longer available for donations please use new donate",
-                "owner": "Mike",
-                "project_name": "RegOnline Closure",
-                "status": "overdue"
-            }
-        ],
-        "description": "RegOnline has been discontinued by the vender and the EOL is end of December 2019. OWASP has used RegOnline for Global and various events for the past several years. There is event metric and attendee information in the platform that we would want to archive prior to the system going offline. Additionally we should ensure our credit balances have been completely moved to our bank accounts prior to December 31, 2019.",
-        "leaders": [
-            {
-                "name": "Dawn Aitken",
-                "email": "dawn.aitken@owasp.com"
-            }
-        ],
-        "url": "https://www2.owasp.org/www-staff/projects/201912-regonline-closure"
     },
     {
         "name": "OWASP Staff Holidays",
@@ -473,13 +432,6 @@
     {
         "name": "Projects Summit - Winter 2020",
         "milestones": [
-            {
-                "milestone_date": "2020-01-05",
-                "description": "Project Nomination Opens",
-                "owner": "Harold",
-                "project_name": "Projects Summit - Winter 2020",
-                "status": "overdue"
-            },
             {
                 "milestone_date": "2020-01-15",
                 "description": "Venue 70% Remaining balance due of $32,457.60",
@@ -674,7 +626,7 @@
                 "description": "Payment 45% of Rental Fee due",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin 2020",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-01-10",
